Fixed scrollbar

--- a/issue-005/sass/base/_base.scss
+++ b/issue-005/sass/base/_base.scss
@@ -48,11 +48,27 @@ html {
   overflow: scroll;
   overflow-x: hidden;
 }
+
 ::-webkit-scrollbar {
-  width: 0px; /* Remove scrollbar space */
-  background: transparent; /* Optional: just make scrollbar invisible */
+    width: 8px; /* Remove scrollbar space */
+    background: transparent; /* Optional: just make scrollbar invisible */
+
+    @include mobile(){
+      width: 0;
+    }
 }
-/* Optional: show position indicator in red */
+
+::-webkit-scrollbar-track {
+  // background: transparent;
+}
+
+// /* Optional: show position indicator in red */
 ::-webkit-scrollbar-thumb {
-  background: #ff0000;
+  @include mobile(){
+    background: transparent;
+  }
+
+
+    background: #ff0000;
+
 }
